search sp working. go logic working. Need to test all cases and finish docs.
