# internal/models/Products.go
@@ -2,11 +2,12 @@ package models
 
 type Product struct {
 	IDProduct uint16   `json:"id_product,omitempty"`
-	Name      string   `json:"product,omitempty"`
+	Product   string   `json:"product,omitempty"`
 	Tags      []string `json:"tags,omitempty"`
+	Tag       string   `json:"tag,omitempty"`
 }
 
-type FailedInsertion struct {
+type FailedProduct struct {
 	IDProduct uint16   `json:"id_product,omitempty"`
 	Tags      []string `json:"tags,omitempty"`
 	Error     error    `json:"error,omitempty"`
@@ -18,4 +19,11 @@ type ProductsJSON struct {
 		Name string   `json:"name"`
 		Tags []string `json:"tags"`
 	} `json:"products"`
+}
+
+type SearchProductResult struct {
+	RowCount    uint        `json:"row_count,omitempty"`
+	QueryResult interface{} `json:"query_result,omitempty"`
+	PageSize    uint        `json:"page_size,omitempty"`
+	PageNumber  uint        `json:"page_number,omitempty"`
 }
